<resources>
    <string name="app_name">CalS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--Simple keypad string-->
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="dot">.</string>


    <string name="plus">+</string>
    <string name="sub">\u2212</string>
    <string name="mul">\u00d7</string>
    <string name="div">\u00f7</string>

    <string name="leftParen">(</string>
    <string name="rightParen">)</string>

    <string name="equal">=</string>


    <!--String of advanced keypad-->

    <string name="abs">Abs</string>
    <string name="ran">Ran</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="degree">\u00b0</string>
    <string name="radian">\u00b0</string>
    <string name="exp">Exp</string>
    <string name="sin">sin</string>
    <string name="arcsin">asin</string>
    <string name="sqrt">\u221a</string>
    <string name="cos">cos</string>
    <string name="arccos">acos</string>
    <string name="tan">tan</string>
    <string name="arctan">atan</string>
    <string name="pi">\u03c0</string>
    <string name="e">e</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="title_activity_about_us">AboutUs</string>



</resources>
