<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_weight="40"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#004D40"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/digit7"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:text="@string/digit7" />

            <Button
                android:id="@+id/digit8"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit8" />

            <Button
                android:id="@+id/digit9"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit9" />

            <ImageButton
                android:id="@+id/backspace"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/backspace_light" />

            <ImageButton
                android:id="@+id/clearAll"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/clear_light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/digit4"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit4" />

            <Button
                android:id="@+id/digit5"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit5" />

            <Button
                android:id="@+id/digit6"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit6" />

            <Button
                android:id="@+id/plus"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plus" />

            <Button
                android:id="@+id/sub"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sub" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/digit1"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit1" />

            <Button
                android:id="@+id/digit2"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit2" />

            <Button
                android:id="@+id/digit3"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit3" />

            <Button
                android:id="@+id/mul"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mul" />

            <Button
                android:id="@+id/div"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/dot"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dot" />

            <Button
                android:id="@+id/digit0"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit0" />


            <Button
                android:id="@+id/leftParen"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="(" />

            <Button
                android:id="@+id/rightParen"
                style="@style/ButtonLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=")" />

            <ImageButton
                android:id="@+id/equal"
                style="@style/ButtonLight"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:focusable="true"
                android:scaleType="centerInside"
                android:src="@drawable/circle" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>